--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Седона — небольшой городок в Аризоне, заслуживающий большего!">
     <meta name="keywords" content="Седона, туризм, Аризона, городок, фото, видео, неродные просторы, местная растительность, дорога на Север, мост дьявола, видеопрезентация.">
-    <link rel="icon" type="image/png" href="../favicon.ico" sizes="32x32">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
-    <link href="styles/styles.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" sizes="32x32">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" sizes="32x32">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона - страница формы отзывов</title>
   </head>
   <body class="page__body">
@@ -17,7 +17,7 @@
         <a class="main-nav__logo logo" href="index.html">
           <img class="logo__img" src="img/logo.svg" width="185" height="96" alt="Главный логотип Седоны.">
         </a>
-        <button class="main-nav__toggle main-nav__toggle--open" type="button">
+        <button class="main-nav__toggle main-nav-toggle main-nav-toggle--open" type="button">
           <span class="visually-hidden">Открыть/закрыть меню сайта</span>
         </button>
         <ul class="page-header__site-menu site-menu">
@@ -40,8 +40,8 @@
       <h1 class="visually-hidden">Страница формы отзыва проекта Седона</h1>
       <section class="promo">
         <h2 class="visually-hidden">Промо-блок</h2>
-        <div class="promo__images-wrapper promo-images-wrapper promo-images-wrapper--page-inner">
-          <img class="promo-images-wrapper__image-text-inner" src="img/sedona-text.svg" width="229" height="39" alt="Добро пожаловать в великолепную Седону. “Потому что Гранд Каньон - отстой!„">
+        <div class="promo__images-wrapper promo-images-wrapper">
+          <img class="promo-images-wrapper__image-text--inner" src="img/sedona-text.svg" width="229" height="39" alt="Добро пожаловать в великолепную Седону. “Потому что Гранд Каньон - отстой!„">
           <img class="promo-images-wrapper__image" src="img/promo-inner-mobile.jpg" width="320" height="214" alt="Пейзаж Седоны. Красивые скалистые горы с деревьями.">
         </div>
       </section>
@@ -50,82 +50,90 @@
         <p class="gallery__lead">Не&nbsp;можете решиться на&nbsp;путешествие из&#8209;за курса? Фотографии помогут вам&nbsp;забыть о&nbsp;политике и&nbsp;экономике.</p>
         <ul class="photos-list">
           <li class="photo photo--large">
-            <a class="photo__link" href="#">
-              <img class="photo__image" src="img/open-spaces-mobile.jpg" width="280" height="280" alt="Просторы Седоны.">
-            </a>
-            <div class="photo__subscription">
-              <div class="photo__caption">
-                <h3 class="photo__title">Неродные просторы</h3>
-                <p class="photo__author">Автор фото: Борис</p>
-              </div>
-              <div class="likes">
-                <button class="likes__button" type="button">
-                  <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-                  </svg>
-                  <span class="visually-hidden">Мне нравится</span>
-                </button>
-                <span class="likes__number">1350</span>
-              </div>
-            </div>
-          </li>
-          <li class="photo">
-            <a class="photo__link" href="#">
-              <img class="photo__image" src="img/vegetation-mobile.jpg" width="280" height="280" alt="Кактус Седоны.">
-            </a>
-            <div class="photo__subscription">
-              <div class="photo__caption">
-                <h3 class="photo__title">Местная растительность</h3>
-                <p class="photo__author">Автор фото: Сергей</p>
-              </div>
-              <div class="likes">
-                <button class="likes__button" type="button">
-                  <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-                  </svg>
-                  <span class="visually-hidden">Мне нравится</span>
-                </button>
-                <span class="likes__number">143</span>
+            <div class="photo__wrapper">
+              <a class="photo__link" href="#">
+                <img class="photo__image" src="img/open-spaces-mobile.jpg" width="280" height="280" alt="Просторы Седоны.">
+              </a>
+              <div class="photo__subscription">
+                <div class="photo__caption">
+                  <h3 class="photo__title">Неродные просторы</h3>
+                  <p class="photo__author">Автор фото: Борис</p>
+                </div>
+                <div class="likes">
+                  <button class="likes__button" type="button">
+                    <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">Мне нравится</span>
+                  </button>
+                  <span class="likes__number">1350</span>
+                </div>
               </div>
             </div>
           </li>
           <li class="photo">
-            <a class="photo__link" href="#">
-              <img class="photo__image" src="img/north-mobile.jpg" width="280" height="280" alt="Горная дорога.">
-            </a>
-            <div class="photo__subscription">
-              <div class="photo__caption">
-                <h3 class="photo__title">Дорога на&nbsp;Север</h3>
-                <p class="photo__author">Автор фото: Петр</p>
-              </div>
-              <div class="likes">
-                <button class="likes__button" type="button">
-                  <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-                  </svg>
-                  <span class="visually-hidden">Мне нравится</span>
-                </button>
-                <span class="likes__number">96</span>
+            <div class="photo__wrapper">
+              <a class="photo__link" href="#">
+                <img class="photo__image" src="img/vegetation-mobile.jpg" width="280" height="280" alt="Кактус Седоны.">
+              </a>
+              <div class="photo__subscription">
+                <div class="photo__caption">
+                  <h3 class="photo__title">Местная растительность</h3>
+                  <p class="photo__author">Автор фото: Сергей</p>
+                </div>
+                <div class="likes">
+                  <button class="likes__button" type="button">
+                    <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">Мне нравится</span>
+                  </button>
+                  <span class="likes__number">143</span>
+                </div>
               </div>
             </div>
           </li>
           <li class="photo">
-            <a class="photo__link" href="#">
-              <img class="photo__image" src="img/devils-bridge-gallery-mobile.jpg" width="280" height="280" alt="Мост дьявола.">
-            </a>
-            <div class="photo__subscription">
-              <div class="photo__caption">
-                <h3 class="photo__title">Мост дьявола</h3>
-                <p class="photo__author">Автор фото: Антон</p>
+            <div class="photo__wrapper">
+              <a class="photo__link" href="#">
+                <img class="photo__image" src="img/north-mobile.jpg" width="280" height="280" alt="Горная дорога.">
+              </a>
+              <div class="photo__subscription">
+                <div class="photo__caption">
+                  <h3 class="photo__title">Дорога на&nbsp;Север</h3>
+                  <p class="photo__author">Автор фото: Петр</p>
+                </div>
+                <div class="likes">
+                  <button class="likes__button" type="button">
+                    <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">Мне нравится</span>
+                  </button>
+                  <span class="likes__number">96</span>
+                </div>
               </div>
-              <div class="likes">
-                <button class="likes__button" type="button">
-                  <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
-                  </svg>
-                  <span class="visually-hidden">Мне нравится</span>
-                </button>
-                <span class="likes__number">254</span>
+            </div>
+          </li>
+          <li class="photo">
+            <div class="photo__wrapper">
+              <a class="photo__link" href="#">
+                <img class="photo__image" src="img/devils-bridge-gallery-mobile.jpg" width="280" height="280" alt="Мост дьявола.">
+              </a>
+              <div class="photo__subscription">
+                <div class="photo__caption">
+                  <h3 class="photo__title">Мост дьявола</h3>
+                  <p class="photo__author">Автор фото: Антон</p>
+                </div>
+                <div class="likes">
+                  <button class="likes__button" type="button">
+                    <svg class="likes__icon" width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path opacity="0.3" d="M12.9636 3.78L12.3364 6.825L11.7091 9.45H14.3227H20.8045V11.55C20.8045 11.55 20.8045 11.55 20.8045 11.655L17.7727 18.9H8.36364V8.4L12.9636 3.78ZM2.09091 10.5V18.9V10.5ZM13.8 0L6.9 6.93C6.48182 7.245 6.27273 7.77 6.27273 8.4V18.9C6.27273 20.055 7.21364 21 8.36364 21H17.7727C18.6091 21 19.3409 20.475 19.6545 19.74L22.7909 12.285C22.8955 12.075 22.8955 11.76 22.8955 11.55V9.45H23C23 8.295 22.0591 7.35 20.9091 7.35H14.3227L15.3682 2.52V2.205C15.3682 1.785 15.1591 1.365 14.95 1.05L13.8 0ZM4.18182 8.4H0V21H4.18182V8.4Z" fill="black"/>
+                    </svg>
+                    <span class="visually-hidden">Мне нравится</span>
+                  </button>
+                  <span class="likes__number">254</span>
+                </div>
               </div>
             </div>
           </li>
