--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Седона — небольшой городок в Аризоне, заслуживающий большего!">
     <meta name="keywords" content="Седона, туризм, Аризона, городок, жилье, мотели, гостиницы, еда, топовый фирменный бургер, сувениры, мост дьявола, достопримечательности, красивая дорога, мало туристов.">
-    <link rel="icon" type="image/png" href="../favicon.ico" sizes="32x32">
-    <link rel="icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
-    <link href="styles/styles.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" sizes="32x32">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico" sizes="32x32">
+    <link href="css/style.css" rel="stylesheet">
     <title>HTML Academy: Седона - главная страница</title>
   </head>
   <body class="page__body">
@@ -17,12 +17,12 @@
         <a class="main-nav__logo logo" href="index.html">
           <img class="logo__img" src="img/logo.svg" width="185" height="96" alt="Главный логотип Седоны.">
         </a>
-        <button class="main-nav__toggle main-nav__toggle--open" type="button">
+        <button class="main-nav__toggle main-nav-toggle main-nav-toggle--open" type="button">
           <span class="visually-hidden">Открыть/закрыть меню сайта</span>
         </button>
         <ul class="page-header__site-menu site-menu">
           <li class="site-menu__item">
-            <a class="site-menu__link site-menu__link--current" href="index.html">Главнвя</a>
+            <a class="site-menu__link site-menu__link--current" href="index.html">Главная</a>
           </li>
           <li class="site-menu__item">
             <a class="site-menu__link" href="catalog.html">Фото и видео</a>
@@ -44,34 +44,34 @@
           <img class="promo-images-wrapper__image-text" src="img/welcome.svg" width="282" height="214" alt="Добро пожаловать в великолепную Седону. “Потому что Гранд Каньон - отстой!„">
           <img class="promo-images-wrapper__image" src="img/promo-image-mobile.jpg" width="320" height="389" alt="Пейзаж Седоны. Красивые скалистые горы с деревьями.">
         </div>
-        <p class="promo__slogan">Седона — небольшой городок в&nbsp;Аризоне, заслуживающий большего!</p>
+        <p class="promo__slogan container">Седона — небольшой<br> городок в&nbsp;Аризоне, заслуживающий большего!</p>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages__lead">Рассмотрим 5 причин, по&nbsp;которым Седона круче, чем&nbsp;Гранд-Каньон!</p>
+        <p class="advantages__lead container">Рассмотрим 5 причин, по&nbsp;которым Седона круче, чем&nbsp;Гранд-Каньон!</p>
         <ul class="advantages-list">
-          <li class="advantages-list__item advantages-list__item--large advantages-list__item--accented advantages-list__item--decor-top">
+          <li class="advantages-list__item advantages-list__item--large advantages-list__item--accented">
             <div class="advantages-list__text-content">
               <h3 class="advantages-list__title">Настоящий городок</h3>
               <p class="advantages-list__text">Седона не&nbsp;аттракцион для&nbsp;туристов, там&nbsp;течёт своя жизнь</p>
             </div>
             <img class="advantages-list__item-img" src="img/photo-city-mobile.jpg" width="320" height="260" alt="Фрагмент красивой архитектуры городка в американском стиле, также видно красивые деревья.">
             <ul class="advantages-list__sublist advantage-sublist">
-              <li class="advantages-list__item advantage-sublist-item advantage-sublist-item--housing">
-                <h4 class="advantages-list__title advantage-sublist-item__title">Жильё</h4>
-                <p class="advantages-list__text advantage-sublist-item__text">Рекомендуем пожить в&nbsp;настоящем мотеле, всё&nbsp;как&nbsp;в&nbsp;кино!</p>
+              <li class="advantage-sublist-item advantage-sublist-item--housing">
+                <h4 class="advantage-sublist-item__title">Жильё</h4>
+                <p class="advantage-sublist-item__text">Рекомендуем пожить в&nbsp;настоящем мотеле, всё&nbsp;как&nbsp;в&nbsp;кино!</p>
               </li>
-              <li class="advantages-list__item advantage-sublist-item advantage-sublist-item--food">
-                <h4 class="advantages-list__title advantage-sublist-item__title">Еда</h4>
-                <p class="advantages-list__text advantage-sublist-item__text">Всегда заказывайте фирменный&nbsp;бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
+              <li class="advantage-sublist-item advantage-sublist-item--food">
+                <h4 class="advantage-sublist-item__title">Еда</h4>
+                <p class="advantage-sublist-item__text">Всегда заказывайте фирменный&nbsp;бургер, вы&nbsp;не&nbsp;разочаруетесь!</p>
               </li>
-              <li class="advantages-list__item advantage-sublist-item advantage-sublist-item--souvenirs">
-                <h4 class="advantages-list__title advantage-sublist-item__title">Сувениры</h4>
-                <p class="advantages-list__text advantage-sublist-item__text">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
+              <li class="advantage-sublist-item advantage-sublist-item--souvenirs">
+                <h4 class="advantage-sublist-item__title">Сувениры</h4>
+                <p class="advantage-sublist-item__text">Не&nbsp;только китайского, но&nbsp;и&nbsp;местного производства!</p>
               </li>
             </ul>
           </li>
-          <li class="advantages-list__item advantages-list__item--large advantages-list__item--accented advantages-list__item--reverse-layout">
+          <li class="advantages-list__item advantages-list__item--large advantages-list__item--reverse-layout">
             <div class="advantages-list__text-content">
               <h3 class="advantages-list__title">Там есть мост дьявола</h3>
               <p class="advantages-list__text">Да, по&nbsp;нему можно пройти! Если вы&nbsp;осмелитесь, конечно</p>
@@ -93,13 +93,13 @@
         </ul>
       </section>
       <section class="trip-date">
-        <h2 class="trip-date__title">Заинтересовались?</h2>
-        <p class="trip-date__lead">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Cедоне</p>
+        <h2 class="trip-date__title container">Заинтересовались?</h2>
+        <p class="trip-date__lead container">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Cедоне</p>
         <a class="trip-date__button button" href="#">Найти гостиницу</a>
       </section>
       <section class="map">
         <h2 class="visually-hidden">Карта с расположением Седоны</h2>
-        <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1675738.146511372!2d-111.95072129463118!3d34.88320279659509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2suk!4v1669828517800!5m2!1sru!2suk" width="320" height="350"  name="Map of Sedona" allow="fullscreen" loading="lazy" referrerpolicy="no-referrer"></iframe>
+        <iframe class="map__image" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1675738.146511372!2d-111.95072129463118!3d34.88320279659509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2suk!4v1669828517800!5m2!1sru!2suk" width="320" height="350"  name="Map of Sedona" allow="fullscreen" loading="lazy" referrerpolicy="no-referrer" frameborder="0"></iframe>
       </section>
     </main>
     <footer class="page-footer">
