Corrects errors indicated by mentor

--- a/source/form.html
+++ b/source/form.html
@@ -53,15 +53,15 @@
             <legend class="reviews-form-group__title">Представьтесь:</legend>
             <div class="reviews-form-group__box input-text-box">
               <label class="input-text-box__label" for="reviews-form-name-field">Имя<sup>*</sup>:</label>
-              <input class="input-text-box__input-text input-text" id="reviews-form-name-field" name="name" type="text" placeholder="Введите Ваше имя" value="Пётр" required>
+              <input class="input-text-box__input-text input-text" id="reviews-form-name-field" name="name" type="text" placeholder="Имя" value="Пётр" required>
             </div>
             <div class="reviews-form-group__box input-text-box">
               <label class="input-text-box__label" for="reviews-form-surname-field">Фамилия<sup>*</sup>:</label>
-              <input class="input-text-box__input-text input-text" id="reviews-form-surname-field" name="surname" type="text" placeholder="Введите Вашу фамилию" value="Иванов *" required>
+              <input class="input-text-box__input-text input-text" id="reviews-form-surname-field" name="surname" type="text" placeholder="Фамилия" value="Иванов *" required>
             </div>
             <div class="reviews-form-group__box input-text-box">
               <label class="input-text-box__label" for="reviews-form-fathers-name-field">Отчество<sup>*</sup>:</label>
-              <input class="input-text-box__input-text input-text" id="reviews-form-fathers-name-field" name="fathers-name" type="text" placeholder="Введите Ваше отчество" value="Викторович" required>
+              <input class="input-text-box__input-text input-text" id="reviews-form-fathers-name-field" name="fathers-name" type="text" placeholder="Отчество" value="Викторович" required>
             </div>
           </fieldset>
           <fieldset class="reviews-form__group reviews-form-group reviews-form-group--icons">
