--- a/source/catalog.html
+++ b/source/catalog.html
@@ -28,6 +28,9 @@
             <a class="site-menu__link site-menu__link--current" href="catalog.html">Фото и видео</a>
           </li>
           <li class="site-menu__item">
+            <span class="site-menu__link site-menu__link--empty"></span>
+          </li>
+          <li class="site-menu__item">
             <a class="site-menu__link" href="form.html">Форма отзыва</a>
           </li>
           <li class="site-menu__item">
