--- a/source/index.html
+++ b/source/index.html
@@ -28,6 +28,9 @@
             <a class="site-menu__link" href="catalog.html">Фото и видео</a>
           </li>
           <li class="site-menu__item">
+            <span class="site-menu__link site-menu__link--empty"></span>
+          </li>
+          <li class="site-menu__item">
             <a class="site-menu__link" href="form.html">Форма отзыва</a>
           </li>
           <li class="site-menu__item">
@@ -94,7 +97,7 @@
       </section>
       <section class="trip-date">
         <h2 class="trip-date__title container">Заинтересовались?</h2>
-        <p class="trip-date__lead container">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Cедоне</p>
+        <p class="trip-date__lead container">Укажите предполагаемые даты поездки,<br> и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Cедоне</p>
         <a class="trip-date__button button" href="#">Найти гостиницу</a>
       </section>
       <section class="map">
