--- a/source/form.html
+++ b/source/form.html
@@ -187,6 +187,6 @@
         </div>
       </div>
     </div>
-    <script src="../source/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
