--- a/source/index.html
+++ b/source/index.html
@@ -142,6 +142,6 @@
         <span class="visually-hidden" lang="en">HTML-Academy</span>
       </a>
     </footer>
-    <script src="../source/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
